--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "llm-client"
+name = "lite-llm-client"
 version = "0.0.1"
 authors = [
   { name="lovian", email="belovian@gmail.com" },
