--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "lite-llm-client"
-version = "0.1.0"
+version = "0.1.1"
 authors = [
   { name="lovian", email="belovian@gmail.com" },
 ]
@@ -19,7 +19,9 @@ classifiers = [
 
 
 dependencies = [
-  "requests"
+  "requests",
+  "python-dotenv",
+  "pydantic"
 ]
 
 
